crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__an_approval_names_the_parts_that_ask_on_a_line_of_their_own.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\e[1;33mapproval needed:\e[0m shell: run "printf x; hostnamectl; uptime; systemctl --failed"
asks for: hostnamectl, systemctl --failed
\e[2mallow? \e[0m\e[1my\e[0m\e[2m = yes, \e[0m\e[1mn\e[0m\e[2m = no\e[0m
\e[?2026l
