crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__an_exit_question_shows_each_line_of_a_command_of_several.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
approval needed: shell: run 2 lines:
  1  systemctl --failed --no-pager
  2  journalctl -b -n 20 --no-pager
leaves the sandbox: the system bus; runs in the sandbox with the system bus for this call
allow? y = yes, n = no
