crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__an_exit_question_shows_the_whole_line_what_leaves_and_the_models_reason.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
approval needed: shell: run "echo 'alias k=kubectl' >> ~/.zshrc"
leaves the sandbox: write ~/.zshrc; runs outside the sandbox
the whole line runs with your full rights (files, secrets, network)
programs: echo (shell builtin)
efr: the file exists; persistence; only you can allow this
the model says: "you asked me to add the alias"
allow? y = yes, n = no
