crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__answered.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\r\e[5A\e[J\e[31m✗ denied\e[0m
\e[?2026l
