crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__consecutive_call_lines_have_no_blank_line_between_them.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: shown
---
\e[?2026hChecking.
\e[?2026l
---
\e[?2026h
\e[33m•\e[0m \e[2m$ uptime\e[0m
\e[?2026l
---
\e[?2026h\r\e[2A\e[J
\e[2m$ uptime\e[0m
\e[?2026l
---
\e[?2026h\e[33m•\e[0m \e[2m$ df -h\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[2m$ df -h\e[0m  \e[31mexit 1\e[0m
\e[2m  │ ...\e[0m
\e[?2026l
---
\e[?2026h
Done.
\e[?2026l
