crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__notes_sit_between_messages_and_dim.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&out)
---
\e[?2026hChecking.
\e[?2026l\e[?2026h
\e[33m•\e[0m \e[36m$ journalctl -u nginx --since today\e[0m
\e[?2026l\e[?2026h\r\e[2A\e[J
\e[33m·\e[0m \e[36m$ journalctl -u nginx --since today\e[0m
\e[2m  │ ...\e[0m
  \e[31m✗ exit 3\e[0m
\e[?2026l\e[?2026h
It exited with 3.
\e[?2026l
