crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__surface_answered.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\r\e[1A\e[J
\e[2mleft in quarantine\e[0m
\e[?2026l
