crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__the_cli_lines_take_their_colours_from_the_palette.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: "shown.join(\"\\n===\\n\")"
---
16 colours, default palette:
\e[?25l\e[?2026h\e[33m⠋\e[0m \e[2mwaiting for the model\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[33m⠋\e[0m \e[36m$ make\e[0m
\e[2m  │ error: no rule\e[0m
\e[?2026l
---
\e[?2026h\r\e[2A\e[J\e[33m·\e[0m \e[36m$ make\e[0m
\e[2m  │ error: no rule\e[0m
  \e[31m✗ exit 2 · 2.0s\e[0m

\e[1;33m? allow this command\e[0m
\e[2m│ \e[0mwrite ~/.zshrc
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m
\e[?2026l\e[?25h
---
\e[?25l\e[?2026h\r\e[4A\e[J
\e[32m✓ allowed\e[0m
\e[33m⠴\e[0m \e[2mwaiting for the model\e[0m
\e[?2026l
===
16 colours, palette:
\e[?25l\e[?2026h\e[33m⠋\e[0m \e[90mwaiting for the model\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[33m⠋\e[0m \e[32m$ make\e[0m
\e[90m  │ error: no rule\e[0m
\e[?2026l
---
\e[?2026h\r\e[2A\e[J\e[33m·\e[0m \e[32m$ make\e[0m
\e[90m  │ error: no rule\e[0m
  \e[31m✗ exit 2 · 2.0s\e[0m

\e[1;35m? allow this command\e[0m
\e[90m│ \e[0mwrite ~/.zshrc
\e[90m│ \e[0m\e[1my\e[0m\e[90m allow\e[0m\e[90m · \e[0m\e[1mn\e[0m\e[90m deny\e[0m
\e[?2026l\e[?25h
---
\e[?25l\e[?2026h\r\e[4A\e[J
\e[92m✓ allowed\e[0m
\e[33m⠴\e[0m \e[90mwaiting for the model\e[0m
\e[?2026l
===
truecolor, palette:
\e[?25l\e[?2026h\e[38;2;242;193;78m⠋\e[0m \e[90mwaiting for the model\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[38;2;242;193;78m⠋\e[0m \e[38;2;96;230;84m$ make\e[0m
\e[90m  │ error: no rule\e[0m
\e[?2026l
---
\e[?2026h\r\e[2A\e[J\e[38;2;242;193;78m·\e[0m \e[38;2;96;230;84m$ make\e[0m
\e[90m  │ error: no rule\e[0m
  \e[38;2;224;108;117m✗ exit 2 · 2.0s\e[0m

\e[1;35m? allow this command\e[0m
\e[90m│ \e[0mwrite ~/.zshrc
\e[90m│ \e[0m\e[1my\e[0m\e[90m allow\e[0m\e[90m · \e[0m\e[1mn\e[0m\e[90m deny\e[0m
\e[?2026l\e[?25h
---
\e[?25l\e[?2026h\r\e[4A\e[J
\e[92m✓ allowed\e[0m
\e[38;2;242;193;78m⠴\e[0m \e[90mwaiting for the model\e[0m
\e[?2026l
===
NO_COLOR, palette:
\e[?25l\e[?2026h\e[1m⠋\e[0m \e[2mwaiting for the model\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[1m⠋\e[0m $ make
\e[2m  │ error: no rule\e[0m
\e[?2026l
---
\e[?2026h\r\e[2A\e[J\e[1m·\e[0m $ make
\e[2m  │ error: no rule\e[0m
  \e[1m✗ exit 2 · 2.0s\e[0m

\e[1m? allow this command\e[0m
\e[2m│ \e[0mwrite ~/.zshrc
\e[2m│ \e[0m\e[1my\e[0m\e[2m allow\e[0m\e[2m · \e[0m\e[1mn\e[0m\e[2m deny\e[0m
\e[?2026l\e[?25h
---
\e[?25l\e[?2026h\r\e[4A\e[J
✓ allowed
\e[1m⠴\e[0m \e[2mwaiting for the model\e[0m
\e[?2026l
